--- a/eda.Rmd
+++ b/eda.Rmd
@@ -53,12 +53,15 @@ netmhcpan <-
    
 hlatypes %>%
     drop_na() %>%
-    mutate(in_netmhc = allele %in% netmhc$allele,
-           in_netmhcpan = allele %in% netmhcpan$allele) %>%
-    summarise_at(vars(4:5), ~round(mean(.) *  100, 2))
+    mutate(NetMHC = allele %in% netmhc$allele,
+           NetMHCpan = allele %in% netmhcpan$allele) %>%
+    summarise_at(vars(4:5), mean) %>%
+    pivot_longer(1:2, names_to = "database", values_to = "percent") %>%
+    mutate(percent = scales::percent(percent))
+
 ```
 
-Vemos que 64% dos alelos são encontrados no NetMHC, mas todos os alelos são encontrados no NetMHCpan v4.1.
+Vemos que 65% dos alelos são encontrados no NetMHC, mas todos os alelos são encontrados no NetMHCpan v4.1.
 
 
 ## Busca no allelefrequencies.net para obter a frequência alélica
@@ -78,7 +81,7 @@ get_frequency <- function(allele) {
 
     nodes <- html_nodes(hlahtml, "table")
 
-    if (length(nodes) == 4 & grepl("Sorry, we did not find any results", nodes[[4]]))
+    if (length(nodes) == 4 && grepl("Sorry, we did not find any results", nodes[[4]]))
 	return(NA)
 
     nodes[[5]] %>%
@@ -149,7 +152,7 @@ Aplico essa função aos alelos:
 ```{r}
 get_rare("A*02:133") %>%
     filter(f > 0) %>%
-    knitr::kable()
+    knitr::kable(format.args = list(scientific = FALSE))
 ```
 
 Vemos que o `A*02:133` não foi descrito na China (nesse banco de dados), apenas possui uma frequência muita baixa numa outra população.
@@ -157,7 +160,7 @@ Vemos que o `A*02:133` não foi descrito na China (nesse banco de dados), apenas
 No entanto, para os outros alelos, podemos plotar a frequência:
 
 ```{r, fig.height=8}
-ggplot(allele_freqs, aes(reorder(allele, wf), wf)) +
+ggplot(allele_freqs, aes(x = reorder(allele, wf), y = wf)) +
     geom_col() +
     facet_wrap(~locus, scales = "free", ncol = 1) +
     theme(axis.text.x = element_text(angle = 90)) +
