--- a/eda.Rmd
+++ b/eda.Rmd
@@ -168,10 +168,9 @@ Vemos que o `A*02:133` não foi descrito na China (nesse banco de dados), apenas
 
 No entanto, para os outros alelos, podemos plotar a frequência:
 
-```{r, fig.height=8}
-ggplot(allele_freqs, aes(x = reorder(allele, wf), y = wf)) +
+```{r}
+ggplot(allele_freqs, aes(x = wf, y = reorder(allele, wf))) +
     geom_col() +
-    facet_wrap(~locus, scales = "free", ncol = 1) +
-    theme(axis.text.x = element_text(angle = 90)) +
-    labs(x = NULL, y = "Allele frequency in China")
+    facet_wrap(~locus, scales = "free", nrow = 1) +
+    labs(x = "Allele frequency in China", y = NULL)
 ```
