--- a/eda.Rmd
+++ b/eda.Rmd
@@ -168,9 +168,13 @@ Vemos que o `A*02:133` não foi descrito na China (nesse banco de dados), apenas
 
 No entanto, para os outros alelos, podemos plotar a frequência:
 
-```{r}
-ggplot(allele_freqs, aes(x = wf, y = reorder(allele, wf))) +
-    geom_col() +
+```{r, fig.width=8, fig.height=6}
+allele_freqs %>%
+    drop_na() %>%
+    ggplot(aes(x = wf, y = reorder(allele, wf), fill = wf)) +
+    geom_col(show.legend = FALSE) +
+    scale_fill_viridis_c(option = "viridis") +
     facet_wrap(~locus, scales = "free", nrow = 1) +
-    labs(x = "Allele frequency in China", y = NULL)
+    labs(x = "Allele frequency in China", y = NULL) +
+    theme_bw()
 ```
